--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="sociais">
             <p class="texto-2"><b>E ai gostou?<br>N&atilde;o se esque&ccedil;a de me encontrar nos links abaixo</b></p><br>
             <a href="https://www.linkedin.com/in/mnluan/" target="_blank"><img src="./resources/img/linkedin.png" alt="LinkedIN" class="social"></a>
-            <a href="https://www.linkedin.com/in/mnluan/" target="_blank"><img src="./resources/img/github.png" alt="GitHub" class="social"></a>
+            <a href="https://github.com/mnluan" target="_blank"><img src="./resources/img/github.png" alt="GitHub" class="social"></a>
             <a href="#" target="_blank"><img src="./resources/img/portfolio.png" alt="Portfolio" class="social"></a>
             <p class="texto-2"><b>Projeto desenvolvido por:<br>Luan Moraes do Nascimento</b></p>
         </div>
